# introducing-python

./: README.md  pyproject.toml
introducing_python/chapter_05/: task_01.py  task_02.py  task_03.py  task_06.py  task_07.py  task_08.py
